feat(introduction): add ko-fi badge

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,8 @@
+import KofiBadge from '../components/kofi';
+
 # Introduction
 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Here you can find all documentation for resources from AC Scripts.
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+<br />
+<KofiBadge link="https://ko-fi.com/antond" />
