fix(radio): wrong use of header

--- a/pages/radio/config.mdx
+++ b/pages/radio/config.mdx
@@ -91,9 +91,8 @@ If set to `0.01`, available frequencies will be **32.56**, **32.57**, **32.58** 
 
 
 ## restrictedChannels
-###### In the following text, the term "group" has the same meaning as "job".
-Restricts certain channel frequencies for given groups and grades.  
-Each specific frequency must be listed separately.
+In the following text, the term "group" has the same meaning as "job".  
+Restricts certain channel frequencies for given groups and grades. Each specific frequency must be listed separately.
 
 **Accepted values**  
 Table of any amount of frequencies
