feat(documents/bridge): don't be too harsh to qb-inventory copy

--- a/pages/documents/bridge.mdx
+++ b/pages/documents/bridge.mdx
@@ -5,9 +5,9 @@ import { Callout } from 'nextra/components'
 Bridge module gives you access to functions controlling player's inventory.  
 Thanks to this, ac_documents is compatible with **any inventory that supports item metadata**.
 
-<Callout type="error" emoji="⚠️">
+<Callout type="error" emoji="🐂">
     **Use OX Inventory for the best experience. It's free, stable, secure and has full metadata support.**  
-    Other inventories listed below are not recommended due to security issues and lack of proper metadata support. Use them at your own risk.
+    *Other inventories listed below are not recommended due to security issues and lack of proper metadata support. Use them at your own risk.*
 </Callout>
 
 ## Pre-made bridges
@@ -70,4 +70,4 @@ Yes, we can. But there are some requirements that the inventory must meet:
 \* This also aplies to LJ Inventory or other reskins.  
 It is very exploitable. Metadata support is poorly written with lot of bugs.
 
-\*\* QS Inventory is a paid copy of QB Inventory with additional bloat.
+\*\* QS Inventory is just a paid copy of QB Inventory. Strongly not recommended.
