--- a/pages/radio/install.mdx
+++ b/pages/radio/install.mdx
@@ -23,7 +23,7 @@ Add the following snippet to `ox_inventory/data/items.lua`.
 		export = 'ac_radio.openRadio',
 		remove = function(total)
 			-- Disconnets a player from the radio when all his radio items are removed.
-			if total < 1 and GetConvar('radio_noRadioDisconnect', 'true') == 'true' then
+			if total < 1 and GetConvar('radio:disconnectWithoutRadio', 'true') == 'true' then
 				exports.ac_radio:leaveRadio()
 			end
 		end
