--- a/pages/radio/issues.mdx
+++ b/pages/radio/issues.mdx
@@ -7,16 +7,18 @@ Make sure you have the latest version of all required resources.
 
 **Downloads**  
 • [Latest version of ac_radio](https://github.com/acscripts/ac_radio/releases/latest)  
-• [Latest version of pma-voice](https://github.com/AvarianKnight/pma-voice/releases/latest)
+• [Latest version of pma-voice](https://github.com/AvarianKnight/pma-voice/releases/latest)  
+• [Latest version of ox_lib](https://github.com/overextended/ox_lib/releases/latest)
 
 ## Start order
 ac_radio must be started **AFTER** pma-voice and/or any supported framework.
 
 **Recommended order**
 ```yaml filename="server.cfg"
+ensure ox_lib
 ensure pma-voice
 ## Remove the commented lines if you're not using any of them.
-# ensure es_extended / qb-core / ox_core
+# ensure ox_core / qbx_core / qb-core / es_extended
 # ensure ox_inventory
 ensure ac_radio
 ```
