--- a/pages/scoreboard/issues.mdx
+++ b/pages/scoreboard/issues.mdx
@@ -2,7 +2,12 @@
 
 Didn't find your answer here? Visit the [Discord server](https://discord.acscripts.dev) for support.
 
-## Unbuilt UI
+## Scoreboard is not visible after opening it
+You've downloaded the scoreboard source code instead of the *prebuilt* release.  
 This resource uses Svelte for the frontend, which requires a build step.  
-If nothing happens when you open the scoreboard, you may need to build the frontend.  
 In case you don't know how to do this, just download the prebuilt version from the [releases page](https://github.com/antond15/ac_scoreboard/releases/latest).
+
+## Status indicator icon is not showing
+The icon must be a valid Iconify icon. You can find the list on [Icônes.js](https://icones.js.org/).  
+Simply find your desired icon and copy it's name as shown in the example below.
+![Icon on Icones.js](/images/examples/ac_scoreboard/icones-icon.png)
