feat(scoreboard): highlight skill issue notice

--- a/pages/scoreboard/guides/ace-sections.mdx
+++ b/pages/scoreboard/guides/ace-sections.mdx
@@ -68,6 +68,6 @@ You can add or remove the permissions during runtime. It will take effect immedi
 ### Test it
 If you did everything correctly, the group section will be visible only for players with the `scoreboard.show.groups` ACE permission. In this example, we set it to the `group.admin` group.
 
-In case it's not working, read this whole page from the beginning and check if you missed something.
+**In case it's not working, read this whole page again from the beginning and check if you missed something.**
 
 </Steps>
