--- a/pages/scoreboard/guides/status-indicators.mdx
+++ b/pages/scoreboard/guides/status-indicators.mdx
@@ -53,6 +53,6 @@ TriggerEvent('ac_scoreboard:setIndicatorState', 'house_robbery', true)
 Run your custom logic and see how the indicator state changes.  
 All indicator changes take effect immediately after reopening the scoreboard.
 
-In case it's not working, read this whole page from the beginning and check if you missed something.
+**In case it's not working, read this whole page again from the beginning and check if you missed something.**
 
 </Steps>
