feat: add tailwindcss

--- a/pages/documents/index.mdx
+++ b/pages/documents/index.mdx
@@ -25,7 +25,7 @@ Make sure to create items called `paper`, `document` and `crumpled_paper` in you
 You can change the used item names in `ac_documents/editable/config.lua`.  
 You can use the following images or make your own.
 
-<div className="ac-item-images">
+<div className="flex mt-2">
 	<Image src="/images/items/paper.png" alt="paper" width={100} height={100} quality={100} />
 	<Image src="/images/items/document.png" alt="document" width={100} height={100} quality={100} />
 	<Image src="/images/items/crumpled_paper.png" alt="crumpled_paper" width={100} height={100} quality={100} />
