--- a/pages/gifts/install.mdx
+++ b/pages/gifts/install.mdx
@@ -53,7 +53,7 @@ setContainerProperties('empty_gift', {
 For more detailed steps, visit the official [Creating items](https://overextended.dev/ox_inventory/Guides/creatingItems) guide.
 
 ### Images
-<div className="ac-item-images">
+<div className="flex mt-2">
 	<Image src="/images/items/empty_gift.png" alt="empty_gift" width={100} height={100} quality={100} />
 	<Image src="/images/items/gift.png" alt="gift" width={100} height={100} quality={100} />
 	<Image src="/images/items/opened_gift.png" alt="opened_gift" width={100} height={100} quality={100} />
