refactor(scoreboard): rename ace permissions file

--- a/pages/scoreboard/config.mdx
+++ b/pages/scoreboard/config.mdx
@@ -100,7 +100,7 @@ How many columns to use for group list.
 
 ## visibleSections \{ \}
 The following accepted values are valid for all options in this category.  
-See the [guide](./guides/ace-sections) for more information on how to use ACE permissions.
+See the [guide](./guides/ace-permissions) for more information on how to use ACE permissions.
 
 **Accepted values**  
 `true{:lua}`: Visible for everyone  
