feat: trick to force TS Type highlighting

--- a/pages/documents/bridge/client.mdx
+++ b/pages/documents/bridge/client.mdx
@@ -4,7 +4,8 @@
 
 The notify function below receives a table with the following structure:
 
-```ts
+```ts {1}#hideDummyLine
+type DUMMY =
 {
   title: string; // main text
   description?: string; // additional text
