--- a/pages/scoreboard/guides/status-indicators.mdx
+++ b/pages/scoreboard/guides/status-indicators.mdx
@@ -1,58 +1,11 @@
-import { Steps } from 'nextra/components'
+import Link from 'next/link';
 
-# Change states of status indicators
+# Status indicators
 
-You can change the states of individual status indicators.  
-This is useful if you want to indicate certain YES or NO states for players.
+You can either manually change the state of a status indicator, or use the integrated minimum group trigger.  
+Both methods are explained in their respective sections.
 
-This guide will show you how to change the state of `house_robbery` status indicator, but it works the same for all indicators.
-
-
-
-## Requirements
-- ability to write your own custom logic for controlling the states
-
-
-
-## Configuration
-You need to find the status indicator ID. This can be found in the `config.lua` file.  
-Each status indicator needs to have a unique ID so you can identify it.
-
-```lua filename="config.lua" {2} /'house_robbery'/
-statusIndicators = {
-    { id = 'house_robbery', label = 'House robbery', icon = 'mdi:house', defaultState = true },
-    { id = 'store_robbery', label = 'Store robbery', icon = 'mdi:store', defaultState = false },
-    { id = 'bank_robbery', label = 'Bank robbery', icon = 'mdi:bank' },
-},
-```
-
-
-
-## Steps
-
-<Steps>
-
-### Create a custom server resource
-The state can be only changed from server-side resources.  
-Create a new resource (or use an existing one) and add the following custom logic to it's server-side file.
-
-### Use the `setIndicatorState` export
-```lua filename="server.lua" /'house_robbery'/ /true/
-exports.ac_scoreboard:setIndicatorState('house_robbery', true)
-```
-
-The first argument is the indicator ID from `config.lua`.  
-The second argument is a boolean value that sets the corresponding state.
-
-You can also use non-networked `ac_scoreboard:setIndicatorState` server event, which works the same way.  
-```lua filename="server.lua" /'house_robbery'/ /true/
-TriggerEvent('ac_scoreboard:setIndicatorState', 'house_robbery', true)
-```
-
-### Test it
-Run your custom logic and see how the indicator state changes.  
-All indicator changes take effect immediately after reopening the scoreboard.
-
-**In case it's not working, read this whole page again from the beginning and check if you missed something.**
-
-</Steps>
+<div className="flex gap-2 mt-4">
+    <Link href="./status-indicators/group-trigger" className="bg-gray-700 p-2 rounded-md w-fit text-white font-medium hover:bg-gray-600 transition-colors">Group trigger</Link>
+    <Link href="./status-indicators/manual" className="bg-gray-700 p-2 rounded-md w-fit text-white font-medium hover:bg-gray-600 transition-colors">Manual</Link>
+</div>
