feat(home): create a landing page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,3 @@
-import KofiBadge from '../components/kofi';
+import Introduction from '../components/introduction-page';
 
-# Introduction
-
-Here you can find all documentation for resources from AC Scripts.
-
-<br />
-<KofiBadge link="https://ko-fi.com/antond" />
+<Introduction />
