feat(scoreboard): add group icons

--- a/pages/scoreboard/config.mdx
+++ b/pages/scoreboard/config.mdx
@@ -181,6 +181,7 @@ type DUMMY =
   label: string; // Name of the group row shown in scoreboard
   groups: string[]; // Array of groups to include in this row's total count
   includeOffDuty?: boolean; // Include off-duty players in total count (overrides the global setting)
+  icon?: string; // Icon shown before the name, must be a valid Iconify name
 }
 ```
 
@@ -188,7 +189,7 @@ type DUMMY =
 
 ## statusIndicators
 Individual status indicators shown in the section.  
-For more information on how to use custom icons, see the guide [here](./issues#status-indicator-icon-is-not-showing).  
+For more information on how to use custom icons, see the guide [here](./issues#icons-are-not-showing).  
 To learn how to change the state of these indicators manually, see the guide [here](./guides/status-indicators/manual).  
 More information about automatically enabling indicators using groups can be found [here](./guides/status-indicators/group-trigger).
 
