--- a/pages/scoreboard/issues.mdx
+++ b/pages/scoreboard/issues.mdx
@@ -7,8 +7,8 @@ You've downloaded the scoreboard source code instead of the *prebuilt* release.
 This resource uses Svelte for the frontend, which requires a build step.  
 In case you don't know how to do this, just download the latest prebuilt version from the [releases page](https://github.com/antond15/ac_scoreboard/releases/latest).
 
-## Status indicator icon is not showing
-The icon must be a valid **Iconify** icon. You can find the list on [Icônes.js](https://icones.js.org/).  
+## Icons are not showing
+Every icon must be a valid **Iconify** icon. You can find the list on [Icônes.js](https://icones.js.org/).  
 Simply find your desired icon and copy it's name as shown in the example below.
 ![Icon on Icones.js](/images/examples/ac_scoreboard/icones-icon.png)
 
