chore: change links to communityox

--- a/pages/gifts/install.mdx
+++ b/pages/gifts/install.mdx
@@ -50,7 +50,7 @@ setContainerProperties('empty_gift', {
 })
 ```
 
-For more detailed steps, visit the official [Creating items](https://overextended.dev/ox_inventory/Guides/creatingItems) guide.
+For more detailed steps, visit the official [Creating items](https://coxdocs.dev/ox_inventory/Guides/creatingItems) guide.
 
 ### Images
 <div className="flex mt-2">
