--- a/pages/scoreboard/install.mdx
+++ b/pages/scoreboard/install.mdx
@@ -11,15 +11,15 @@ Click on the button below to download the latest release of the scoreboard.
 </a>
 
 ## Download the dependencies
-AC Scoreboard only requires [ox_lib](https://github.com/overextended/ox_lib) to run.  
+AC Scoreboard only requires [ox_lib](https://github.com/communityox/ox_lib) to run.  
 You can download the latest release of ox_lib by clicking on the button below.
-<a href="https://github.com/overextended/ox_lib/releases/latest/download/ox_lib.zip">
+<a href="https://github.com/communityox/ox_lib/releases/latest/download/ox_lib.zip">
     <img className="mt-2" src="https://raw.githubusercontent.com/acscripts/.github/refs/heads/main/badges/download.svg" alt="Download here" />
 </a>
 
 You can optionally use one of the supported frameworks to enable additional features such as group list.  
 <Tabs items={['ox_core 🐂', 'qbx_core', 'qb-core', 'es_extended']}>
-  <Tabs.Tab>[overextended/ox_core](https://github.com/overextended/ox_core)</Tabs.Tab>
+  <Tabs.Tab>[communityox/ox_core](https://github.com/communityox/ox_core)</Tabs.Tab>
   <Tabs.Tab>[Qbox-project/qbx_core](https://github.com/Qbox-project/qbx_core)</Tabs.Tab>
   <Tabs.Tab>[qbcore-framework/qb-core](https://github.com/qbcore-framework/qb-core)</Tabs.Tab>
   <Tabs.Tab>[esx-framework/esx_core](https://github.com/esx-framework/esx_core)</Tabs.Tab>
