--- a/pages/radio/install.mdx
+++ b/pages/radio/install.mdx
@@ -30,7 +30,7 @@ Add the following snippet to `ox_inventory/data/items.lua`.
 	}
 },
 ```
-For more detailed steps, visit the official [Creating items](https://overextended.dev/ox_inventory/Guides/creatingItems) guide.
+For more detailed steps, visit the official [Creating items](https://coxdocs.dev/ox_inventory/Guides/creatingItems) guide.
 
 
 
